--- a/client/app/app.css
+++ b/client/app/app.css
@@ -7,12 +7,56 @@
 @source "../node_modules/flyonui/flyonui.js"; 
 @import "flyonui/src/vendor/editor.css";
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+@plugin "flyonui/theme" {
+  name: "corporate";
+  default: true;
+  
 }
 
-nav,footer{
+@theme {
+  --font-sans: "Arial Black","Inter", ui-sans-serif, system-ui, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+    --animate-scroll: infinite-scroll 120s linear infinite;
+    --animate-logo: infinite-scroll 20s linear infinite;
+    --animate-news: infinite-scroll 60s linear infinite;
+    --animate-reverse: infinite-reverse 60s linear infinite;
+    --animate-wiggle: wiggle 1s ease-in-out infinite;
+
+    @keyframes wiggle {
+
+        0%,
+        100% {
+            transform: rotate(-3deg);
+        }
+
+        50% {
+            transform: rotate(3deg);
+        }
+    }
+
+    @keyframes infinite-scroll {
+        0% {
+            transform: translateX(0%);
+        }
+
+        100% {
+            transform: translateX(-100%);
+        }
+    }
+
+    @keyframes infinite-reverse {
+        0% {
+            transform: translateX(-100%);
+        }
+
+        100% {
+            transform: translateX(0%);
+        }
+    }
+}
+
+nav,footer, .link{
   @apply rounded-none
 }
 html,
@@ -22,4 +66,15 @@ body {
   @media (prefers-color-scheme: dark) {
     color-scheme: dark;
   }
+}
+.swiper-custom-bullet{
+  @apply h-5 w-5 rounded-full opacity-25 text-secondary  bg-secondary;
+ 
+}
+div.section {
+  @apply  lg:px-20   py-8 sm:py-16 lg:py-12 px-10;
+}
+
+.swiper-custom-bullet.swiper-custom-bullet-active {
+ @apply bg-primary opacity-100;
 }
